Finished up the homepage

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@ layout: default
 <div class="homeWrapper">
   <h1 class="indexTitle"><b>{{ site.title }}</b></h1>
   <h1 class="indexTagline">Visual Communication</h1>
-  <div class="circle"></div>
   <ul class="indexNavigation">
-    <li><a href="{{ site.baseurl }}projects.html">Projects</a></li>
-    <li><a href="{{ site.baseurl }}information.html">Information</a></li>
+    <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
+    <li><a href="{{ site.baseurl }}/information">Information</a></li>
     <li><a href="https://designforum.us/" target="_bank">Education</a></li>
     <li><a href="mailto:{{ site.email }}">Contact</a></li>
   </ul>
@@ -18,7 +17,8 @@ layout: default
       <a href="tel:1-954-632-6367">+1 954.632.6367 </a>
     </div>
     <div class="footerLocation">
-      <a href="">525 NW 1st Ave<br>Fort Lauderdale, FL 33301</a>
+      <p>Copyright 2018</p>
+      <a href="{{ site.baseurl }}/colophon">Colophon</a>
     </div>
   </footer>
 </div>
