This has the projects color palette feature working.

--- a/_projects/project-one.html
+++ b/_projects/project-one.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: ProjectName
+title: I am a test
 location: Fort Lauderdale, Florida
 category: Brand Identity
 projectDate: 2017
-projectColor: pink
-textColor: black
+projectColor: "#660643"
+lightText: true
 ---
