--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,21 @@
 ---
 layout: default
 ---
-{% include nav.html %}
 <style type="text/css">
 {% for project in site.projects %}
+{% if project.lightText == true %}
+a.{{ project.title | slugify }}:visited {
+  background-color: {{ project.projectColor }};
+  color: white;
+}
+a.{{ project.title | slugify }}:hover h3, a.{{ project.title | slugify }}:hover small {
+  opacity: .5;
+}
+a.{{ project.title | slugify }}:active {
+  background-color: {{ project.projectColor }};
+  color: white;
+}
+{% else %}
 a.{{ project.title | slugify }}:visited {
   background-color: {{ project.projectColor }};
 }
@@ -13,6 +25,7 @@ a.{{ project.title | slugify }}:hover h3, a.{{ project.title | slugify }}:hover 
 a.{{ project.title | slugify }}:active {
   background-color: {{ project.projectColor }};
 }
+{% endif %}
 {% endfor %}
 </style>
 <div class="projectsWrapper">
