--- a/_projects/new-project.html
+++ b/_projects/new-project.html
@@ -1,9 +1,20 @@
 ---
 layout: project
-title: New
+title: test
 location: Fort Lauderdale, Florida
-category: Brand Identity
+category: Album Artwork
 projectDate: 2017
-projectColor: "#660643"
+projectColor: "#000000"
 lightText: true
 ---
+<p>When I approached the album artwork for this year's Ocean’s Edge School of Worship record "Behold", I wanted to create an experience. The stark black cover reveals the beautiful landscape inside once opened, representing the act or process of beholding. The landscape inside is expansive and colorful much like the lyrics and sound contained within the disc.</p>
+<ul>
+  <li>Team: Calvary Chapel Fort Lauderdale Communications Department</li>
+  <li>Art Direction: David Gurr</li>
+  <li>Design: David Gurr</li>
+  <li>Photography: Kukuh Himawan Samudro</li>
+  <li>Typeface: Caslon, Gotham</li>
+  <li>Printing: WTS Media</li>
+  <li>-</li>
+  <li>Project Images: Don Fils</li>
+</ul>
