--- a/information.html
+++ b/information.html
@@ -1,3 +1,19 @@
 ---
 layout: default
 ---
+<div class="informationContentContainer">
+  <div class="mainContent">
+    <h1>David Gurr</h1>
+    <p>Visual communication is a powerful tool, yet we see it abused, misused, or wasted so often. I am a firm believer in the fact that design changes our world, for better or for worse. I feel a responsibility to the work I put out into the world, no matter how small the project may appear. My desire is to enrich society and our humanity by utilizing visual communication in a responsible, innovative, and unprecedented manner. If this excites you, as it should, then perhaps we should consider breaking ground on a new visual venture together. Here’s to a better world; a world filled with businesses, governments, and a populous that understands, respects, and demands a higher quality of design for ourselves and for our children.
+    </p>
+    <p>
+    Cheers,<br>
+    David Gurr</p>
+    <a href="mailto:{{ site.email }}">contact</a>
+  </div>
+  <div class="imageContent">
+    <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_1.jpg" height="50%" width="100%"/>
+    <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_2.jpg" height="50%" width="50%"/>
+    <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_3.jpg" height="50%" width="50%"/>
+  </div>
+</div>
