Fixed project hover, Contact text, and project last odd image

--- a/information.html
+++ b/information.html
@@ -8,7 +8,7 @@ layout: default
     <p>
     Cheers,<br>
     David Gurr</p>
-    <a href="mailto:{{ site.email }}">contact</a>
+    <a href="mailto:{{ site.email }}">Contact</a>
   </div>
   <div class="imageContent">
     <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_1.jpg" height="50%" width="100%"/>
