--- a/colophon.html
+++ b/colophon.html
@@ -10,6 +10,6 @@ layout: default
     <li>Typeface: Helvetica</li>
     <li>Developed: Zachary Newton</li>
     <li>Host: GitHub</li>
-    <li>Developed: 2018</li>
+    <li>Built: 2018</li>
   </ul>
 </div>
