--- a/information.html
+++ b/information.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="informationContentContainer">
   <div class="mainContent">
-    <h1>David Gurr</h1>
+    <h1>About</h1>
     <p>{{ site.description }}</p>
     <a href="mailto:{{ site.email }}">Contact</a>
   </div>
