--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@ a.{{ project.title | slugify }}:hover {
   color: white;
 }
 a.{{ project.title | slugify }}:hover h3, a.{{ project.title | slugify }}:hover small {
-  opacity: .75;
+  opacity: 1;
 }
 a.{{ project.title | slugify }}:active {
   background-color: {{ project.projectColor }};
@@ -27,7 +27,7 @@ a.{{ project.title | slugify }}:hover {
   background-color: {{ project.projectColor }};
 }
 a.{{ project.title | slugify }}:hover h3, a.{{ project.title | slugify }}:hover small {
-  opacity: .75;
+  opacity: 1;
 }
 a.{{ project.title | slugify }}:active {
   background-color: {{ project.projectColor }};
