Updated Front Matter

--- a/_projects/change-for-change.html
+++ b/_projects/change-for-change.html
@@ -2,7 +2,7 @@
 layout: project
 title: Change for Change
 location: Fort Lauderdale, Florida
-category: Brand Identity
+workCategory: Brand Identity
 projectDate: 2017
 projectColor: "#ffe74f"
 lightText: false
