--- a/_projects/fulton.html
+++ b/_projects/fulton.html
@@ -2,7 +2,7 @@
 layout: project
 title: Fulton
 location: Coral Springs, Florida
-category: Brand Identity
+workCategory: Brand Identity
 projectDate: 2018
 projectColor: "#b48a31"
 lightText: true
