--- a/_projects/no-greater-worth.html
+++ b/_projects/no-greater-worth.html
@@ -2,7 +2,7 @@
 layout: project
 title: No Greater Worth
 location: Boca Raton, Florida
-category: Album Artwork
+workCategory: Album Artwork
 projectDate: 2018
 projectColor: "#19354A"
 lightText: true
