--- a/_projects/ramp48.html
+++ b/_projects/ramp48.html
@@ -2,7 +2,7 @@
 layout: project
 title: Ramp48
 location: Fort Lauderdale, Florida
-category: Brand Identity
+workCategory: Brand Identity
 projectDate: 2017
 projectColor: "#E31F26"
 lightText: true
