--- a/_projects/retrograde-coffee-roasters.html
+++ b/_projects/retrograde-coffee-roasters.html
@@ -2,7 +2,7 @@
 layout: project
 title: Retrograde Coffee Roasters
 location: Sebastopol, California
-category: Packaging
+workCategory: Packaging
 projectDate: 2018
 projectColor: "#77cee0"
 lightText: false
