--- a/_projects/wayport.html
+++ b/_projects/wayport.html
@@ -2,7 +2,7 @@
 layout: project
 title: Wayport
 location: West Palm Beach, Florida
-category: Brand Identity
+workCategory: Brand Identity
 projectDate: 2018
 projectColor: "#003a5c"
 lightText: true
