--- a/_projects/behold.html
+++ b/_projects/behold.html
@@ -2,7 +2,7 @@
 layout: project
 title: Behold
 location: Fort Lauderdale, Florida
-category: Album Artwork
+workCategory: Album Artwork
 projectDate: 2017
 projectColor: "#000000"
 lightText: true
