--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@ a.{{ project.title | slugify }}:active {
     <a href="{{ site.baseurl }}{{ project.url }}" class="project {{ project.title | slugify }}{% if project.lightText == true %} lightText{% endif %}">
       <h3>{{ project.title }}</h3>
       <small>{{ project.location }}</small>
-      <small>{{ project.category }}</small>
+      <small>{{ project.workCategory }}</small>
       <small>{{ project.projectDate }}</small>
     </a>
   {% endfor %}
