Updated image front matter

--- a/_projects/fulton.html
+++ b/_projects/fulton.html
@@ -6,15 +6,15 @@ workCategory: Brand Identity
 projectDate: 2018
 projectColor: "#b48a31"
 lightText: true
-primaryImage: Fulton_Project_0.jpg
+primaryImage: "/assets/img/Fulton_Project_0.jpg"
 images:
-  - Fulton_Project_1.jpg
-  - Fulton_Project_2.jpg
-  - Fulton_Project_3.jpg
-  - Fulton_Project_4.jpg
-  - Fulton_Project_5.jpg
-  - Fulton_Project_6.jpg
-  - Fulton_Project_7.jpg
+  - "/assets/img/Fulton_Project_1.jpg"
+  - "/assets/img/Fulton_Project_2.jpg"
+  - "/assets/img/Fulton_Project_3.jpg"
+  - "/assets/img/Fulton_Project_4.jpg"
+  - "/assets/img/Fulton_Project_5.jpg"
+  - "/assets/img/Fulton_Project_6.jpg"
+  - "/assets/img/Fulton_Project_7.jpg"
 ---
 <p>Fulton Insurance has been serving the insurance needs of the South Florida area since 1962. Their previous branding did not represent the level of excellence, knowledge, and services that they had to offer. We designed an abstract mark that conveyed trust, dependability, and expertise. The rebrand was received with excitement by the company and has increased their brand’s visibility and reach.</p>
 <ul>
