--- a/_projects/wayport.html
+++ b/_projects/wayport.html
@@ -6,16 +6,16 @@ workCategory: Brand Identity
 projectDate: 2018
 projectColor: "#003a5c"
 lightText: true
-primaryImage: Wayport_Project_0.jpg
+primaryImage: "/assets/img/Wayport_Project_0.jpg"
 images:
-  - Wayport_Project_1.jpg
-  - Wayport_Project_2.jpg
-  - Wayport_Project_3.jpg
-  - Wayport_Project_4.jpg
-  - Wayport_Project_5.jpg
-  - Wayport_Project_6.jpg
-  - Wayport_Project_7.jpg
-  - Wayport_Project_8.jpg
+  - "/assets/img/Wayport_Project_1.jpg"
+  - "/assets/img/Wayport_Project_2.jpg"
+  - "/assets/img/Wayport_Project_3.jpg"
+  - "/assets/img/Wayport_Project_4.jpg"
+  - "/assets/img/Wayport_Project_5.jpg"
+  - "/assets/img/Wayport_Project_6.jpg"
+  - "/assets/img/Wayport_Project_7.jpg"
+  - "/assets/img/Wayport_Project_8.jpg"
 ---
 <p>Chris Wayland came to VCI in need of rebranding and repositioning his newly acquired travel agency. Originally named Oriental Express, the company received calls for Asian take-out food daily, so it was obvious that the current branding was not attracting the right customers. Although they had many Asian clients, Chris no longer wanted the company represented in this way. We started the branding process by renaming his company to Wayport which nods to Chris’s last name Wayland and also his favorite destination: Portland.</p>
 <p>We were inspired by the elegance and optimism that was associated with air and nautical travel in the 1960’s. We saw an opportunity to niche Wayport as a professional, well-established travel agency for the modern traveler by focusing our attention on developing a brand experience that enhanced their customer’s travel planning and communication. Our goal was to bring his travel agency to a modern audience and remind travelers of the benefits, nostalgia, and satisfaction of using such a service. The identity has been well received by both Chris and his customers and also won a Corporate Identity Gold trophy in Muse Creative Awards 2018.</p>
