--- a/_projects/behold.html
+++ b/_projects/behold.html
@@ -6,11 +6,11 @@ workCategory: Album Artwork
 projectDate: 2017
 projectColor: "#000000"
 lightText: true
-primaryImage: Behold_Project_1.jpg
+primaryImage: "/assets/img/Behold_Project_1.jpg"
 images:
-  - Behold_Project_2.jpg
-  - Behold_Project_3.jpg
-  - Behold_Project_4.jpg
+  - "/assets/img/Behold_Project_2.jpg"
+  - "/assets/img/Behold_Project_3.jpg"
+  - "/assets/img/Behold_Project_4.jpg"
 ---
 <p>When I approached the album artwork for this year's Ocean’s Edge School of Worship record "Behold", I wanted to create an experience. The stark black cover reveals the beautiful landscape inside once opened, representing the act or process of beholding. The landscape inside is expansive and colorful much like the lyrics and sound contained within the disc.</p>
 <ul>
