--- a/_projects/change-for-change.html
+++ b/_projects/change-for-change.html
@@ -6,15 +6,15 @@ workCategory: Brand Identity
 projectDate: 2017
 projectColor: "#ffe74f"
 lightText: false
-primaryImage: Change-for-Change_Project_1.jpg
+primaryImage: "/assets/img/Change-for-Change_Project_1.jpg"
 images:
-  - Change-for-Change_Project_2.jpg
-  - Change-for-Change_Project_3.jpg
-  - Change-for-Change_Project_4.jpg
-  - Change-for-Change_Project_5.jpg
-  - Change-for-Change_Project_6.jpg
-  - Change-for-Change_Project_7.jpg
-  - Change-for-Change_Project_8.jpg
+  - "/assets/img/Change-for-Change_Project_2.jpg"
+  - "/assets/img/Change-for-Change_Project_3.jpg"
+  - "/assets/img/Change-for-Change_Project_4.jpg"
+  - "/assets/img/Change-for-Change_Project_5.jpg"
+  - "/assets/img/Change-for-Change_Project_6.jpg"
+  - "/assets/img/Change-for-Change_Project_7.jpg"
+  - "/assets/img/Change-for-Change_Project_8.jpg"
 ---
 <p>Change for Change is a fundraising initiative that Calvary Chapel Fort Lauderdale began in 2010. Their outdated branding was not successfully capturing the attention of quick moving foot traffic and was losing momentum each year. I saw this as an opportunity to reintroduce the initiative with a bold public-facing image. I developed a new brand identity that leveraged the color yellow and I also created posters and banners that combined photography and copy in a way that would encourage action at even the lowest level, “Every penny counts”. The campaign was successful and the branding was widely appreciated among the community.</p>
 <ul>
