--- a/_projects/ramp48.html
+++ b/_projects/ramp48.html
@@ -6,12 +6,12 @@ workCategory: Brand Identity
 projectDate: 2017
 projectColor: "#E31F26"
 lightText: true
-primaryImage: Ramp48_Project_0.jpg
+primaryImage: "/assets/img/Ramp48_Project_0.jpg"
 images:
-  - Ramp48_Project_1.jpg
-  - Ramp48_Project_2.jpg
-  - Ramp48_Project_3.jpg
-  - Ramp48_Project_4.jpg
+  - "/assets/img/Ramp48_Project_1.jpg"
+  - "/assets/img/Ramp48_Project_2.jpg"
+  - "/assets/img/Ramp48_Project_3.jpg"
+  - "/assets/img/Ramp48_Project_4.jpg"
 ---
 <p>Ramp48 was struggling to create merchandise and marketing materials that met the needs of their audience. They felt restricted by their current branding and could not efficiently expand the identity to items like skate decks, brochures, and advertisements. I developed a new logo mark system as well as guidelines on color, typography, and layout that could be used by their in-house designer. Since the rebrand, their latest merchandise has flown off the shelves and has consistently sold out.</p>
 <ul>
