Updated Project Front Matter

--- a/_projects/no-greater-worth.html
+++ b/_projects/no-greater-worth.html
@@ -6,6 +6,14 @@ workCategory: Album Artwork
 projectDate: 2018
 projectColor: "#19354A"
 lightText: true
+body: "Danny Luis approached me with a difficult problem: how to abstractly and artistically represent the title “No Greater Worth” on a cover. After many iterations, I realized that the simple formation of a greater than / less than symbol was graphically interesting. I shortened the less-than symbol slightly to suggest an “L”, while the greater than symbol represented the “D”. This tied in the concept with his artist name, Danny Luis. The simplicity of the mark enabled the album’s identity to easily transfer to merchandise and marketing materials."
+projectDetails:
+  - "Art Direction: David Gurr"
+  - "Design: David Gurr"
+  - "Typeface: Gotham"
+  - "Printing: WTS Media (digi-pak)"
+  - "-"
+  - "Project Images: Don Fils"
 primaryImage: "/assets/img/Danny-Luis_Project_1.jpg"
 images:
   - "/assets/img/Danny-Luis_Project_2.jpg"
@@ -15,12 +23,3 @@ images:
   - "/assets/img/Danny-Luis_Project_6.jpg"
   - "/assets/img/Danny-Luis_Project_7.jpg"
 ---
-<p>Danny Luis approached me with a difficult problem: how to abstractly and artistically represent the title “No Greater Worth” on a cover. After many iterations, I realized that the simple formation of a greater than / less than symbol was graphically interesting. I shortened the less-than symbol slightly to suggest an “L”, while the greater than symbol represented the “D”. This tied in the concept with his artist name, Danny Luis. The simplicity of the mark enabled the album’s identity to easily transfer to merchandise and marketing materials.</p>
-<ul>
-  <li>Art Direction: David Gurr</li>
-  <li>Design: David Gurr</li>
-  <li>Typeface: Gotham</li>
-  <li>Printing: WTS Media (digi-pak)</li>
-  <li>-</li>
-  <li>Project Images: Don Fils</li>
-</ul>
