--- a/_projects/ramp48.html
+++ b/_projects/ramp48.html
@@ -6,6 +6,15 @@ workCategory: Brand Identity
 projectDate: 2017
 projectColor: "#E31F26"
 lightText: true
+body: Ramp48 was struggling to create merchandise and marketing materials that met the needs of their audience. They felt restricted by their current branding and could not efficiently expand the identity to items like skate decks, brochures, and advertisements. I developed a new logo mark system as well as guidelines on color, typography, and layout that could be used by their in-house designer. Since the rebrand, their latest merchandise has flown off the shelves and has consistently sold out.
+projectDetails:
+  - "Team: Calvary Chapel Fort Lauderdale"
+  - "Art Direction: David Gurr"
+  - "Design: David Gurr, Stephen Rodriguez"
+  - "Typeface: Gotham"
+  - "Printing: Clutch Distribution (skate deck)"
+  - "-"
+  - "Project Images: Don Fils"
 primaryImage: "/assets/img/Ramp48_Project_0.jpg"
 images:
   - "/assets/img/Ramp48_Project_1.jpg"
@@ -13,13 +22,3 @@ images:
   - "/assets/img/Ramp48_Project_3.jpg"
   - "/assets/img/Ramp48_Project_4.jpg"
 ---
-<p>Ramp48 was struggling to create merchandise and marketing materials that met the needs of their audience. They felt restricted by their current branding and could not efficiently expand the identity to items like skate decks, brochures, and advertisements. I developed a new logo mark system as well as guidelines on color, typography, and layout that could be used by their in-house designer. Since the rebrand, their latest merchandise has flown off the shelves and has consistently sold out.</p>
-<ul>
-  <li>Team: Calvary Chapel Fort Lauderdale</li>
-  <li>Art Direction: David Gurr</li>
-  <li>Design: David Gurr, Stephen Rodriguez</li>
-  <li>Typeface: Gotham</li>
-  <li>Printing: Clutch Distribution (skate deck)</li>
-  <li>-</li>
-  <li>Project Images: Don Fils</li>
-</ul>
