--- a/_projects/change-for-change.html
+++ b/_projects/change-for-change.html
@@ -7,6 +7,16 @@ projectDate: 2017
 projectColor: "#ffe74f"
 lightText: false
 primaryImage: "/assets/img/Change-for-Change_Project_1.jpg"
+body: Change for Change is a fundraising initiative that Calvary Chapel Fort Lauderdale began in 2010. Their outdated branding was not successfully capturing the attention of quick moving foot traffic and was losing momentum each year. I saw this as an opportunity to reintroduce the initiative with a bold public-facing image. I developed a new brand identity that leveraged the color yellow and I also created posters and banners that combined photography and copy in a way that would encourage action at even the lowest level, “Every penny counts”. The campaign was successful and the branding was widely appreciated among the community.
+projectDetails:
+  - "Team: Calvary Chapel Fort Lauderdale"
+  - "Art Direction: David Gurr"
+  - "Design: David Gurr"
+  - "Photography: Unsplash"
+  - "Copywriting: David Gurr"
+  - "Typeface: Sofia Pro"
+  - "-"
+  - "Project Images: Justus Martin"
 images:
   - "/assets/img/Change-for-Change_Project_2.jpg"
   - "/assets/img/Change-for-Change_Project_3.jpg"
@@ -16,14 +26,3 @@ images:
   - "/assets/img/Change-for-Change_Project_7.jpg"
   - "/assets/img/Change-for-Change_Project_8.jpg"
 ---
-<p>Change for Change is a fundraising initiative that Calvary Chapel Fort Lauderdale began in 2010. Their outdated branding was not successfully capturing the attention of quick moving foot traffic and was losing momentum each year. I saw this as an opportunity to reintroduce the initiative with a bold public-facing image. I developed a new brand identity that leveraged the color yellow and I also created posters and banners that combined photography and copy in a way that would encourage action at even the lowest level, “Every penny counts”. The campaign was successful and the branding was widely appreciated among the community.</p>
-<ul>
-  <li>Team: Calvary Chapel Fort Lauderdale</li>
-  <li>Art Direction: David Gurr</li>
-  <li>Design: David Gurr</li>
-  <li>Photography: Unsplash</li>
-  <li>Copywriting: David Gurr</li>
-  <li>Typeface: Sofia Pro</li>
-  <li>-</li>
-  <li>Project Images: Justus Martin</li>
-</ul>
