--- a/_projects/fulton.html
+++ b/_projects/fulton.html
@@ -6,6 +6,16 @@ workCategory: Brand Identity
 projectDate: 2018
 projectColor: "#b48a31"
 lightText: true
+body: Fulton Insurance has been serving the insurance needs of the South Florida area since 1962. Their previous branding did not represent the level of excellence, knowledge, and services that they had to offer. We designed an abstract mark that conveyed trust, dependability, and expertise. The rebrand was received with excitement by the company and has increased their brand’s visibility and reach.
+projectDetails:
+  - "Team: Visual Creatives, Inc."
+  - "Awards: Muse Creative Awards 2018 Corporate Identity Rose Gold"
+  - "Art Direction: David Gurr"
+  - "Design: David Gurr"
+  - "Typeface: Montserrat, Garamond"
+  - "Printing: Blurb (guidelines)"
+  - "-"
+  - "Project Images: Dave Imber"
 primaryImage: "/assets/img/Fulton_Project_0.jpg"
 images:
   - "/assets/img/Fulton_Project_1.jpg"
@@ -16,14 +26,3 @@ images:
   - "/assets/img/Fulton_Project_6.jpg"
   - "/assets/img/Fulton_Project_7.jpg"
 ---
-<p>Fulton Insurance has been serving the insurance needs of the South Florida area since 1962. Their previous branding did not represent the level of excellence, knowledge, and services that they had to offer. We designed an abstract mark that conveyed trust, dependability, and expertise. The rebrand was received with excitement by the company and has increased their brand’s visibility and reach.</p>
-<ul>
-  <li>Team: Visual Creatives, Inc.</li>
-  <li>Awards: Muse Creative Awards 2018 Corporate Identity Rose Gold</li>
-  <li>Art Direction: David Gurr</li>
-  <li>Design: David Gurr</li>
-  <li>Typeface: Montserrat, Garamond</li>
-  <li>Printing: Blurb (guidelines)</li>
-  <li>-</li>
-  <li>Project Images: Dave Imber</li>
-</ul>
