--- a/_projects/retrograde-coffee-roasters.html
+++ b/_projects/retrograde-coffee-roasters.html
@@ -6,6 +6,16 @@ workCategory: Packaging
 projectDate: 2018
 projectColor: "#77cee0"
 lightText: false
+body: Retrograde Coffee Roasters came to us in need of a packaging redesign, so we developed a flexible label and color system as well as typographically updating their brand. We left the astronaut untouched, but converted it to one color and used it in a more graphic way. They loved the bags so much that they asked us to expand the design across all of their branding. We had the opportunity to design their menus, cups, business cards, and signage along the way. The updated packaging and branding has been extremely well-received by their customers. The new identity has revitalized their image and has been creating positive notoriety among the community.
+projectDetails:
+  - "Team: Visual Creatives, Inc."
+  - "Art Direction: David Gurr"
+  - "Design: David Gurr"
+  - "Copywriting: Dave Imber"
+  - "Typeface: Futura"
+  - "Printing: Roastar (packaging)"
+  - "-"
+  - "Project Images: Dave Imber"
 primaryImage: "/assets/img/Retrograde-Coffee-Roasters_Project_0.jpg"
 images:
   - "/assets/img/Retrograde-Coffee-Roasters_Project_1.jpg"
@@ -14,14 +24,3 @@ images:
   - "/assets/img/Retrograde-Coffee-Roasters_Project_4.jpg"
   - "/assets/img/Retrograde-Coffee-Roasters_Project_5.jpg"
 ---
-<p>Retrograde Coffee Roasters came to us in need of a packaging redesign, so we developed a flexible label and color system as well as typographically updating their brand. We left the astronaut untouched, but converted it to one color and used it in a more graphic way. They loved the bags so much that they asked us to expand the design across all of their branding. We had the opportunity to design their menus, cups, business cards, and signage along the way. The updated packaging and branding has been extremely well-received by their customers. The new identity has revitalized their image and has been creating positive notoriety among the community.</p>
-<ul>
-  <li>Team: Visual Creatives, Inc.</li>
-  <li>Art Direction: David Gurr</li>
-  <li>Design: David Gurr</li>
-  <li>Copywriting: Dave Imber</li>
-  <li>Typeface: Futura</li>
-  <li>Printing: Roastar (packaging)</li>
-  <li>-</li>
-  <li>Project Images: Dave Imber</li>
-</ul>
