--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@ a.{{ project.title | slugify }}:active {
 {% endfor %}
 </style>
 <div class="projectsWrapper">
-  {% for project in site.projects %}
+  {% for project in site.projects reversed %}
     <a href="{{ site.baseurl }}{{ project.url }}" class="project {{ project.title | slugify }}{% if project.lightText == true %} lightText{% endif %}">
       <h3>{{ project.title }}</h3>
       <small>{{ project.location }}</small>
