--- a/information.html
+++ b/information.html
@@ -8,6 +8,6 @@ layout: default
     <a href="mailto:{{ site.email }}">Contact</a>
   </div>
   <div class="imageContent">
-    <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_1.jpg" height="100%" width="100%"/>
+    <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_1.jpg" class="lb-js" data-path="auto" height="100%" width="100%"/>
   </div>
 </div>
