--- a/information.html
+++ b/information.html
@@ -9,16 +9,16 @@ about: Visual communication is a powerful tool, yet we see it abused, misused, o
   consider breaking ground on a new visual venture together. Here’s to a better world;
   a world filled with businesses, governments, and a populous that understands, respects,
   and demands a higher quality of design for ourselves and for our children.
-image: ''
+image: 'bio/DavidGurr_Image_1.jpg'
 
 ---
 <div class="informationContentContainer">
   <div class="mainContent">
     <h1>About</h1>
-    <p>{{ site.description }}</p>
+    <p>{{ page.about }}</p>
     <a href="mailto:{{ site.email }}">Contact</a>
   </div>
   <div class="imageContent">
-    <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_1.jpg" class="lb-js" data-path="auto" height="100%" width="100%"/>
+    <img src="assets/img/bio/DavidGurr_Image_1.jpg" class="lb-js" data-path="auto" height="100%" width="100%"/>
   </div>
 </div>
