fixed info page

--- a/information.html
+++ b/information.html
@@ -19,6 +19,6 @@ image: "/assets/img/bio/DavidGurr_Image_1.jpg"
     <a href="mailto:{{ site.email }}">Contact</a>
   </div>
   <div class="imageContent">
-    <img src="{{ site.baseurl }}/assets/img/bio/DavidGurr_Image_1.jpg" class="lb-js" data-path="auto" height="100%" width="100%"/>
+    <img src="{{ site.baseurl }}{{ page.image }}" class="lb-js" data-path="auto" height="100%" width="100%"/>
   </div>
 </div>
