Updated SEO description and mailto targets

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: default
   <ul class="indexNavigation">
     <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
     <li><a href="{{ site.baseurl }}/information">Information</a></li>
-    <li><a href="mailto:{{ site.email }}">Contact</a></li>
+    <li><a href="mailto:{{ site.email }}" target="_blank">Contact</a></li>
   </ul>
   <footer>
     <div class="footerContact">
-      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+      <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
       <br>
       <a href="tel:1-954-632-6367">+1 954.632.6367 </a>
     </div>
