--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ layout: default
       <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
       <br>
       <a href="tel:1-954-632-6367">+1 954.632.6367 </a>
+      <br>
+      <br>
+      <p>980 N. Federal Hwy #110<br>Boca Raton, FL 33432</p>
     </div>
     <div class="footerLocation">
       <p>Copyright 2018</p>
