--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       <a href="tel:1-954-632-6367">+1 954.632.6367 </a>
       <br>
       <br>
-      <p>980 N. Federal Hwy #110<br>Boca Raton, FL 33432</p>
+      <a href="https://www.google.com/maps/place/980+N+Federal+Hwy+%23110,+Boca+Raton,+FL+33432/@26.359532,-80.0852763,17z/data=!3m1!4b1!4m5!3m4!1s0x88d8e1f641097097:0x60c8b5a2f902a51e!8m2!3d26.359532!4d-80.0830876" target="_blank">980 N. Federal Hwy #110<br>Boca Raton, FL 33432</a>
     </div>
     <div class="footerLocation">
       <p>Copyright 2018</p>
