--- a/new.html
+++ b/new.html
@@ -2,7 +2,7 @@
 layout: splash-screen
 ---
 <div class="splash-screen-wrapper">
-  <h1 class="splash-screen-body"><b>David Gurr</b> is a graphic designer with a concentration in visual identity based in Boca Raton, Florida, USA. He currently runs <b>Studio Gurr</b> while also collaborating with other local firms including <i>Freshmade</i>, <i>Helium Creative</i>, <i>Brand Tango</i>, and <i>Lamark Media</i>.<br/>
+  <h1 class="splash-screen-body"><b>David Gurr</b> is a graphic designer with a concentration in visual identity based in Boca Raton, Florida, USA. He is currently the principal designer at <b>Studio Gurr</b>.<br/>
     <br/>
     <a href="tel:1-833-638-4877" target="_blank">+1 (833) 638-4877</a><br/>
     <a href="mailto:david@studiogurr.com" target="_blank">David@StudioGurr.com</a><br/>
