--- a/new.html
+++ b/new.html
@@ -2,7 +2,7 @@
 layout: splash-screen
 ---
 <div class="splash-screen-wrapper">
-  <h1 class="splash-screen-body"><b>David Gurr</b> is a graphic designer with a concentration in visual identity based in Boca Raton, Florida, USA. He is currently the principal designer at <b>Studio Gurr</b>.<br/>
+  <h1 class="splash-screen-body"><b><a href="https://www.linkedin.com/in/david-gurr-26290984/" target="_blank">David Gurr</a></b> is a graphic designer with a concentration in visual identity based in Boca Raton, Florida, USA. He is currently the principal designer at <b><a href="https://studiogurr.com" target="_blank">Studio Gurr</a></b>.<br/>
     <br/>
     <a href="tel:1-833-638-4877" target="_blank">+1 (833) 638-4877</a><br/>
     <a href="mailto:david@studiogurr.com" target="_blank">David@StudioGurr.com</a><br/>
