Hid the old site

--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 ---
-layout: default
+layout: splash-screen
 ---
-<div class="homeWrapper">
-  <h1 class="indexTitle"><b>{{ site.title }}</b></h1>
-  <h2 class="indexTagline">Visual Communication</h2>
-  <ul class="indexNavigation">
-    <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
-    <li><a href="{{ site.baseurl }}/information">Information</a></li>
-    <li><a href="mailto:{{ site.email }}" target="_blank">Contact</a></li>
-  </ul>
-  <footer>
-    <div class="footerContact">
-      <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a>
-      <br>
-      <a href="tel:1-954-632-6367">+1 954.632.6367 </a>
-      <br>
-      <br>
-      <a href="https://www.google.com/maps/place/980+N+Federal+Hwy+%23110,+Boca+Raton,+FL+33432/@26.359532,-80.0852763,17z/data=!3m1!4b1!4m5!3m4!1s0x88d8e1f641097097:0x60c8b5a2f902a51e!8m2!3d26.359532!4d-80.0830876" target="_blank">980 N. Federal Hwy #110<br>Boca Raton, FL 33432</a>
-    </div>
-    <div class="footerLocation">
-      <p>Copyright 2018</p>
-      <a href="{{ site.baseurl }}/colophon">Colophon</a>
-    </div>
-  </footer>
+<div class="splash-screen-wrapper">
+  <h1 class="splash-screen-body"><b><a href="https://www.linkedin.com/in/david-gurr-26290984/" target="_blank">David Gurr</a></b> is a graphic designer with a concentration in visual identity based in Boca Raton, Florida, USA. He is currently the principal designer at <b><a href="https://studiogurr.com" target="_blank">Studio Gurr</a></b>.<br/>
+    <br/>
+    <a href="tel:1-833-638-4877" target="_blank">+1 (833) 638-4877</a><br/>
+    <a href="mailto:david@studiogurr.com" target="_blank">David@StudioGurr.com</a><br/>
+    <a href="https://studiogurr.com" target="_blank">StudioGurr.com</a><br/>
+  </h1>
 </div>
