--- a/information.html
+++ b/information.html
@@ -10,7 +10,7 @@ about: 'Visual communication is a powerful tool, yet so often we see it abused, 
   businesses, governments, and a populous that understands, respects, and demands
   a higher quality of design for ourselves and for our children. '
 image: "/assets/img/bio/DavidGurr_Image_1.jpg"
-
+sitemap: false
 ---
 <div class="informationContentContainer">
   <div class="mainContent">
