--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: splash-screen
 ---
 <div class="splash-screen-wrapper">
-  <h1 class="splash-screen-body"><b><a href="https://www.linkedin.com/in/david-gurr-26290984/" target="_blank">David Gurr</a></b> is a graphic designer with a concentration in visual identity based in Boca Raton, Florida, USA. He is currently the principal designer at <b><a href="https://studiogurr.com" target="_blank">Studio Gurr</a></b>.<br/>
+  <h1 class="splash-screen-body"><b><a href="https://www.linkedin.com/in/david-gurr-26290984/" target="_blank">David Gurr</a></b> is a proven creative director with deep experience in the development of brand identity systems, packaging suites, and large-scale publication design for global clientele. He is currently a partner at <b><a href="https://studiogurr.com" target="_blank">Studio Gurr</a></b>.<br/>
     <br/>
-    <a href="tel:1-833-638-4877" target="_blank">+1 (833) 638-4877</a><br/>
+    <a href="tel:1-888-973-4557" target="_blank">+1 (888) 973-4557</a><br/>
     <a href="mailto:david@studiogurr.com" target="_blank">David@StudioGurr.com</a><br/>
     <a href="https://studiogurr.com" target="_blank">StudioGurr.com</a><br/>
   </h1>
